Use java 11 :(